--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "prettier --write"
+    "format": "prettier --write",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:ci": "jest --ci",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@types/node": "18.15.11",
@@ -21,7 +25,14 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "5.16.4",
+    "@testing-library/react": "14.0.0",
+    "@testing-library/user-event": "14.4.3",
+    "@types/testing-library__jest-dom": "5.14.5",
     "eslint-config-prettier": "^8.8.0",
+    "husky": "^8.0.3",
+    "jest": "29.5.0",
+    "jest-environment-jsdom": "29.5.0",
     "prettier": "^2.8.7"
   }
 }
