--- a/package.json
+++ b/package.json
@@ -29,10 +29,17 @@
     "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.4.3",
     "@types/testing-library__jest-dom": "5.14.5",
+    "commitizen": "^4.3.0",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint-config-prettier": "^8.8.0",
     "husky": "^8.0.3",
     "jest": "29.5.0",
     "jest-environment-jsdom": "29.5.0",
     "prettier": "^2.8.7"
+  },
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
   }
 }
