chore(setup): setup project

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,9 +15,10 @@
     "jsx": "preserve",
     "incremental": true,
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@mocks/*": ["./src/_mocks_/*"],
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "*/.ts", "*/.tsx"],
   "exclude": ["node_modules"]
 }
