--- a/package.json
+++ b/package.json
@@ -9,37 +9,47 @@
     "lint": "next lint",
     "format": "prettier --write",
     "test": "jest",
+    "test:cov": "jest --coverage",
     "test:watch": "jest --watch",
     "test:ci": "jest --ci",
-    "prepare": "husky install"
+    "postinstall": "husky install"
   },
   "dependencies": {
-    "@types/node": "18.15.11",
-    "@types/react": "18.0.34",
-    "@types/react-dom": "18.0.11",
-    "eslint": "8.38.0",
-    "eslint-config-next": "13.3.0",
     "next": "13.3.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "5.0.4"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.6.1",
+    "@commitlint/config-conventional": "^17.6.1",
     "@testing-library/jest-dom": "5.16.4",
     "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.4.3",
+    "@types/node": "18.15.11",
+    "@types/react": "18.0.34",
+    "@types/react-dom": "18.0.11",
     "@types/testing-library__jest-dom": "5.14.5",
-    "commitizen": "^4.3.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.0",
     "cz-conventional-changelog": "^3.3.0",
+    "eslint": "8.38.0",
+    "eslint-config-next": "13.3.0",
     "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.3",
     "jest": "29.5.0",
     "jest-environment-jsdom": "29.5.0",
-    "prettier": "^2.8.7"
+    "jest-extended": "^3.2.4",
+    "prettier": "^2.8.7",
+    "typescript": "5.0.4"
   },
   "config": {
     "commitizen": {
-      "path": "cz-conventional-changelog"
+      "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
   }
 }
